--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/mokka86coffee/node_work_csv_blob_parse#readme",
   "devDependencies": {
+    "husky": "^1.3.1",
     "iconv-lite": "^0.4.24",
+    "lint-staged": "^8.1.5",
     "needle": "^2.2.4",
+    "prettier": "^1.16.4",
     "request": "^2.88.0",
     "transliteration": "^2.1.3"
   }
